--- a/locales/fr.json
+++ b/locales/fr.json
@@ -9,7 +9,7 @@
     "teams": "Équipes"
   },
   "search": {
-    "placeholder": "Recherchez un joueur ou une équipe...",
+    "placeholder": "Chercher une joueur ou une équipe...",
     "placeholder2": "Chercher une équipe ou joueur..."
   },
   "footer": {
